--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -152,8 +152,8 @@
               href: Standard Toolkit/Toolkit/Controls/KryptonRadioButton.md
             - name: Krypton Rich Text Box
               href: Standard Toolkit/Toolkit/Controls/KryptonRichTextBox.md
-            - name: Krypton Scroll Bar
-              href: Standard Toolkit/Toolkit/Controls/KryptonScrollBar.md
+            - name: Krypton Scroll Bars
+              href: Standard Toolkit/Toolkit/Controls/KryptonScrollBars.md
             - name: Krypton Search Box
               href: Standard Toolkit/Toolkit/Controls/KryptonSearchBox.md
             - name: Krypton Separator
@@ -218,12 +218,18 @@
               href: Standard Toolkit/Utilities/KryptonSystemTreeView.md
             - name: Icon Extraction
               href: Standard Toolkit/Toolkit/Utilities/IconExtractionIndex.md
+            - name: Krypton JumpList
+              href: Standard Toolkit/Toolkit/Utilities/KryptonJumpList.md
             - name: Localization
               href: Standard Toolkit/Toolkit/Utilities/LocalizationIndex.md
             - name: System Icons
               href: Standard Toolkit/Toolkit/Utilities/SystemIcons.md
+            - name: Taskbar Thumbnail Buttons
+              href: Standard Toolkit/Toolkit/Utilities/TaskbarThumbnailButtons.md
             - name: Krypton WebView2
               href: Standard Toolkit/Utilities/KryptonWebView2.md
+            - name: UIA Providers
+              href: Standard Toolkit/Toolkit/Utilities/UIAProviders.md
     - name: Ribbon
       href: Standard Toolkit/KryptonRibbon.md
       items:
@@ -231,6 +237,8 @@
           href: Standard Toolkit/Ribbon/Krypton Ribbon Overview.md
         - name: Back Stage View
           href: Standard Toolkit/Ribbon/Components/BackStage View/KryptonRibbonBackstageView.md
+        - name: Krypton Detachable Ribbon
+          href: Standard Toolkit/Ribbon/KryptonDetachableRibbon.md
         - name: Tabs
           href: Standard Toolkit/Ribbon/KryptonRibbonTabs.md
         - name: Groups
