--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -3427,6 +3427,36 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Ribbon/KryptonDetachableRibbon.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Ribbon/KryptonDetachableRibbon.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Ribbon/KryptonDetachableRibbonAPIReference.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Ribbon/KryptonDetachableRibbonAPIReference.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Ribbon/KryptonDetachableRibbonExamples.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Ribbon/KryptonDetachableRibbonExamples.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Ribbon/KryptonGallery.md",
       "output": {
         ".html": {
@@ -4577,10 +4607,10 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonScrollBar.md",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonScrollbars.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonScrollBar.html"
+          "relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonScrollbars.html"
         }
       },
       "version": ""
@@ -6057,6 +6087,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Utilities/KryptonJumpList.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Utilities/KryptonJumpList.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/Utilities/LocalizationAdvancedTopics.md",
       "output": {
         ".html": {
@@ -6121,6 +6161,26 @@
       "output": {
         ".html": {
           "relative_path": "articles/Standard Toolkit/Toolkit/Utilities/SystemIconsComprehensiveGuide.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Utilities/TaskbarThumbnailButtons.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Utilities/TaskbarThumbnailButtons.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Utilities/UIAProviders.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Utilities/UIAProviders.html"
         }
       },
       "version": ""
