--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -73,6 +73,8 @@
               href: Standard Toolkit/Toolkit/Components/KryptonOpenFileDialog.md
             - name: Krypton Print Dialog
               href: Standard Toolkit/Toolkit/Components/KryptonPrintDialog.md
+            - name: Krypton Print PreviewDialog
+              href: Standard Toolkit/Toolkit/Components/KryptonPrintPreviewDialog.md
             - name: Krypton Save File Dialog
               href: Standard Toolkit/Toolkit/Components/KryptonSaveFileDialog.md
             - name: Krypton Task Dialog
@@ -142,10 +144,14 @@
               href: Standard Toolkit/Toolkit/Controls/KryptonPanel.md
             - name: Krypton Picture Box
               href: Standard Toolkit/Toolkit/Controls/KryptonPictureBox.md
-            - name: Krypton Progress Bar
-              href: Standard Toolkit/Toolkit/Controls/KryptonProgressBar.md
             - name: Krypton Powered By Button
               href: Standard Toolkit/Toolkit/Controls/KryptonPoweredByButton.md
+            - name: Krypton Print Document
+              href: Standard Toolkit/Toolkit/Controls/KryptonPrintDocument.md
+            - name: Krypton Print Preview Control
+              href: Standard Toolkit/Toolkit/Controls/KryptonPrintPreviewControl.md
+            - name: Krypton Progress Bar
+              href: Standard Toolkit/Toolkit/Controls/KryptonProgressBar.md
             - name: Krypton Property Grid
               href: Standard Toolkit/Toolkit/Controls/KryptonPropertyGrid.md
             - name: Krypton Radio Button
@@ -214,6 +220,8 @@
               href: Standard Toolkit/Utilities/KryptonFileSystemListView.md
             - name: Krypton File System Tree View
               href: Standard Toolkit/Utilities/KryptonFileSystemTreeView.md
+            - name: Krypton Print Preview Control
+              href: Standard Toolkit/Utilities/KryptonPrintPreviewControl.md
             - name: Krypton System Tree View
               href: Standard Toolkit/Utilities/KryptonSystemTreeView.md
             - name: Icon Extraction
