--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -4067,6 +4067,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Components/KryptonPrintPreviewDialog.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Components/KryptonPrintPreviewDialog.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/Components/KryptonSaveFileDialog.md",
       "output": {
         ".html": {
@@ -4561,6 +4571,26 @@
       "output": {
         ".html": {
           "relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonPoweredByButton.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonPrintDocument.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonPrintDocument.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonPrintPreviewControl.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Controls/KryptonPrintPreviewControl.html"
         }
       },
       "version": ""
@@ -7411,6 +7441,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Standard Toolkit/Utilities/KryptonFileSystemTreeView.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Utilities/KryptonPrintPreviewControl.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Utilities/KryptonPrintPreviewControl.html"
         }
       },
       "version": ""
