--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -395,6 +395,8 @@
   items:
     - name: Allowing for Longer Path and File Names
       href: Contributing/AllowingforLongerPathandFileNames.md
+    - name: Applying Licence Headers
+      href: Contributing/ApplyingLicenceHeaders.md
     - name: Build System
       href: Contributing/BuildSystemDocumentationIndex.md
     - name: Build Workflows
