--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -67,6 +67,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/ApplyingLicenceHeaders.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/ApplyingLicenceHeaders.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Contributing/Auditing/KryptonAuditSummary.md",
       "output": {
         ".html": {
