* More doc updates
* More doc updates

--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -212,6 +212,8 @@
           items:
             - name: Bug Report Dialog
               href: Standard Toolkit/Utilities/BugReportingDialog.md
+            - name: GitHub Bug Reporting
+              href: Standard Toolkit/Utilities/GitHubBugReporting.md
             - name: Krypton Exception Dialog
               href: Standard Toolkit/Utilities/KryptonExceptionDialog.md
             - name: Exception Handler
