--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -7417,6 +7417,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Utilities/GitHubBugReporting.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Utilities/GitHubBugReporting.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Utilities/KryptonExceptionDialog.md",
       "output": {
         ".html": {
