--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -397,6 +397,8 @@
   items:
     - name: Allowing for Longer Path and File Names
       href: Contributing/AllowingforLongerPathandFileNames.md
+    - name: Alpha Branch Backup Sync
+      href: Contributing/AlphaBackupSync.md
     - name: Applying Licence Headers
       href: Contributing/ApplyingLicenceHeaders.md
     - name: Build System
