--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -423,6 +423,8 @@
       href: Contributing/HowtoCreateTheAPIReference.md
     - name: How to Manage 'Using' Statements
       href: Contributing/HowToManageUsingStatements.md
+    - name: Installing .NET SDK Preview Versions
+      href: Contributing/InstallingNETSDKPreviewVersions.md
     - name: Target Framework Management
       href: Contributing/TargetFrameworkManagement.md
     - name: Kill Switches
@@ -436,7 +438,7 @@
     - name: Using File Scoped Namespaces
       href: Contributing/UsingFileScopedNamespaces.md
     - name: Using SLNX in Visual Studio
-      href: Contributing/UsingSLNXinVisualStudio.md 
+      href: Contributing/UsingSLNXinVisualStudio.md
     - name: Using the MSBuild Log Viewer
       href: Contributing/UsingtheMSBuildLogViewer.md
 - name: Support
