--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -386,6 +386,16 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/InstallingNETSDKPreviewVersions.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/InstallingNETSDKPreviewVersions.html"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Resource",
       "source_relative_path": "articles/Contributing/Making a Pull Request/Build Log Example.png",
       "output": {
